Fixed page overflow

--- a/src/Css/Hero.css
+++ b/src/Css/Hero.css
@@ -9,9 +9,15 @@
 }
 
 .hero-title {
-  font-size: 40px;
+  /* font-size: 40px; */
   margin-bottom: 16px;
   font-weight: 800;
+  max-width: 60vw;
+}
+
+.hero-title .text {
+  font-size: 3rem;
+  max-width: 60vw;
 }
 
 .hero-content {
@@ -85,12 +91,13 @@
 }
 
 .hero-title {
-  display: inline-block;
+  /* display: inline-block; */
+  overflow-wrap: break-word;
 }
 
 .text {
   border-right: 2px solid white;
-  width: 100%;
+  /* width: 100%; */
   white-space: nowrap;
   overflow: hidden;
   animation: typing 6s steps(21) infinite,
@@ -130,8 +137,9 @@
     padding: 20px;
   }
 
-  .hero-title {
-    font-size: 18px;
+  .hero-title .text {
+    font-size: 1.4rem;
+    overflow-wrap: break-word;
   }
 
   .hero-buttons {
